Wrap BC generation in flag
Helps windows users compile and link on windows, however they will still need to pull the generated BC files from an external source to use the library properly

--- a/lib/Arch/AArch32/Runtime/CMakeLists.txt
+++ b/lib/Arch/AArch32/Runtime/CMakeLists.txt
@@ -54,5 +54,7 @@ function(add_runtime_helper target_name little_endian)
   )
 endfunction()
 
-add_runtime_helper(aarch32 1)
-add_runtime_helper(thumb2 1)
+if(REMILL_ENABLE_BC_GENERATION)
+  add_runtime_helper(aarch32 1)
+  add_runtime_helper(thumb2 1)
+endif()
