--- a/lib/Arch/SPARC32/Runtime/CMakeLists.txt
+++ b/lib/Arch/SPARC32/Runtime/CMakeLists.txt
@@ -57,5 +57,7 @@ function(add_runtime_helper target_name little_endian)
   )
 endfunction()
 
-add_runtime_helper(sparc32 0)
-add_runtime_helper(sparc32_sleigh 0)
+if(REMILL_ENABLE_BC_GENERATION)
+  add_runtime_helper(sparc32 0)
+  add_runtime_helper(sparc32_sleigh 0)
+endif()
