--- a/lib/Arch/AArch64/Runtime/CMakeLists.txt
+++ b/lib/Arch/AArch64/Runtime/CMakeLists.txt
@@ -73,8 +73,10 @@ function(add_runtime_helper target_name address_bit_size little_endian)
   )
 endfunction()
 
-if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-  # add_runtime_helper(aarch64be 64 0)
-  add_runtime_helper(aarch64 64 1)
-  add_runtime_helper(aarch64_sleigh 64 1)
+if(REMILL_ENABLE_BC_GENERATION)
+  if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+    # add_runtime_helper(aarch64be 64 0)
+    add_runtime_helper(aarch64 64 1)
+    add_runtime_helper(aarch64_sleigh 64 1)
+  endif()
 endif()
