--- a/lib/Arch/SPARC64/Runtime/CMakeLists.txt
+++ b/lib/Arch/SPARC64/Runtime/CMakeLists.txt
@@ -77,6 +77,8 @@ function(add_runtime_helper target_name little_endian)
   )
 endfunction()
 
-if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-  add_runtime_helper(sparc64 0)
+if(REMILL_ENABLE_BC_GENERATION)
+  if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+    add_runtime_helper(sparc64 0)
+  endif()
 endif()
