Comment test_runner_lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -304,7 +304,7 @@ InstallExternalTarget("ext_llvmlink" "${LLVMLINK_PATH}" "BIN" "${INSTALLED_LLVML
 add_custom_target(semantics)
 
 # shared JIT tools
-add_subdirectory(test_runner_lib)
+# add_subdirectory(test_runner_lib)
 
 # tools
 add_subdirectory(bin)
